<resources>
    <string name="app_name">Vocabulearn</string>
    <string name="title_study">Study</string>
    <string name="title_folders">Folders</string>
    <string name="title_smart_sets">Smart Sets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="rb_amount_5">5</string>
    <string name="rb_amount_10">10</string>
    <string name="rb_amount_20">20</string>
    <string name="rb_amount_30">30</string>
    <string name="rb_amount_all">All</string>
    <string name="rb_side_front">Front First</string>
    <string name="rb_side_back">Back First</string>
    <string name="rb_side_mixed">Mixed</string>
    <string name="rb_order_smart">Smart</string>
    <string name="rb_order_random">Random</string>
    <string name="rb_order_hard">Hard</string>
    <string name="rb_order_old">Old</string>
    <string name="rb_order_new">New</string>

    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="ok_button">OK</string>
</resources>
